tests/reject/old_proof_chain.alg
sort S : Sort;
op f : S → S;
op a : → S;
lemma l f(a) = a;
proof
  f(a);
  = a by step;
qed;
